--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "mongoose-resource",
   "description": "Restful API layer with Mongoose based resources",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "author": "Ishai Jaffe <ishai@empeeric.com>",
   "dependencies": {
     "express":"",
 	"express-resource":"",
 	"mongoose":""
   },
+  "main": "index",
   "keywords": ["api", "mongoose", "rest", "restful"],
   "repository": "git@github.com:IshaiJaffe/mongoose-resource.git",
   "engines": { "node": ">= 0.4.1 < 0.7.0" }
