--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mongoose-resource",
-  "description": "Restful API layer with Mongoose based resources",
-  "version": "0.0.4",
+  "description": "Restful API layer with Mongoose based resources. Inspired by python Tastypie",
+  "version": "0.0.5",
   "author": "Ishai Jaffe <ishai@empeeric.com>",
   "dependencies": {
     "express":"",
