--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mongoose-resource",
-  "description": "Restful API layer with Mongoose based resources. Inspired by python Tastypie",
+  "name": "jest",
+  "description": "JS restful API layer with Mongoose based resources. Inspired by python Tastypie",
   "version": "0.0.6",
   "author": "Ishai Jaffe <ishai@empeeric.com>",
   "dependencies": {
@@ -10,7 +10,7 @@
     "api-easy":""
   },
   "main": "index",
-  "keywords": ["api", "mongoose", "rest", "restful"],
-  "repository": "git@github.com:IshaiJaffe/mongoose-resource.git",
+  "keywords": ["api", "mongoose", "rest", "restful","resource"],
+  "repository": "git@github.com:Empeeric/jest.git",
   "engines": { "node": ">= 0.4.1" }
 }
