--- a/package.json
+++ b/package.json
@@ -1,24 +1,33 @@
 {
-	"name":"jest",
-	"description":"JavaScriptational State Transfer. JS restful API layer with Mongoose based resources. Inspired by python Tastypie",
-	"version":"0.1.35",
-	"author":"Ishai Jaffe <ishai@empeeric.com>",
-	"contributors": [
-		{ "name": "Alon Valadji", "email": "alon@empeeric.com" }
-	],
-	"dependencies":{
-		"underscore":"",
-		"sji":""
-	},
-	"devDependencies":{ 
-		"express":"",
-		"mongoose":"",
-		"api-easy":""
-	},
-	"main":"index",
-	"keywords":["api", "mongoose", "rest", "restful", "resource"],
-	"repository":"git@github.com:Empeeric/jest.git",
-	"engines":{
-		"node":">= 0.4.1"
-	}
+  "name": "jest",
+  "description": "JavaScriptational State Transfer. JS restful API layer with Mongoose based resources. Inspired by python Tastypie",
+  "version": "0.1.36",
+  "author": "Ishai Jaffe <ishai@empeeric.com>",
+  "contributors": [
+    {
+      "name": "Alon Valadji",
+      "email": "alon@empeeric.com"
+    }
+  ],
+  "dependencies": {
+    "underscore": "",
+    "sji": ""
+  },
+  "devDependencies": {
+    "express": "",
+    "mongoose": "",
+    "api-easy": ""
+  },
+  "main": "index",
+  "keywords": [
+    "api",
+    "mongoose",
+    "rest",
+    "restful",
+    "resource"
+  ],
+  "repository": "git@github.com:Empeeric/jest.git",
+  "engines": {
+    "node": ">= 0.4.1"
+  }
 }
