--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     {
       "name": "Alon Valadji",
       "email": "alon@empeeric.com"
+    },
+    {
+      "name": "Refael Ackermann",
+      "email": "refael@empeeric.com"
     }
   ],
   "dependencies": {
